--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "sweetalert2": "^11.22.4"
+    "sweetalert2": "^11.22.4",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
