--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/leaflet": "^1.9.20",
+    "@types/multer": "^2.0.0",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "multer": "^2.0.2",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
