--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/leaflet": "^1.9.20",
+    "@types/moment-jalaali": "^0.7.9",
     "@types/multer": "^2.0.0",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "jalaali-js": "^1.2.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
