--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "sweetalert2": "^11.22.4",
     "swiper": "^11.2.10",
     "yup": "^1.7.0"
