--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^2.3.4",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.5.0",
     "jalaali-js": "^1.2.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
@@ -28,6 +29,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "recharts": "^3.1.2",
     "sweetalert2": "^11.22.4",
     "swiper": "^11.2.10",
     "yup": "^1.7.0"
