--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "react-select": "^5.10.2",
     "recharts": "^3.1.2",
     "sweetalert2": "^11.22.4",
     "swiper": "^11.2.10",
